objects/TestObject2__c.object
<CustomObject><fields>
        <fullName>Base_Price2__c</fullName>
        <label>Base Price2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Description2__c</fullName>
        <label>Description2</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Enabled2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled2</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>SKU2__c</fullName>
        <label>SKU2</label>
        <length>255</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>TestObject2</label><nameField>
        <label>TestObject2 Name</label>
        <type>Text</type>
    </nameField><pluralLabel>TestObjects2</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>